<resources>
    <string name="app_name">Store GPS Position</string>
    <string name="app_version">1.3</string>
    <string name="title_activity_maps">Position to remember</string>
    <string name="title_activity">Store GPS Position</string>
    <string name="maptypehead">Select map type</string>
    <string name="find_pos">Find GPS position</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dropped_pin">Remember position</string>
    <string name="tools">Tools</string>

    <!-- Strings related to help -->
    <string name="action_help">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="help_description0">To remember a GPS position:</string>
    <string name="help_description1">  1. Move the map to the position you want to remember.</string>
    <string name="help_description2">  2. Long click on the wanted position.</string>
    <string name="help_description3">  3. A marker should be visible.</string>
    <string name="help_description4">Note: Only one marker can be stored.</string>
    <string name="help_description5">To find a stored GPS position:</string>
    <string name="help_description6">  1. Select Find GPS position from menu.</string>
    <string name="help_description7">  2. The map will be moved and zoomed to the stored GPS position.</string>

    <!-- Strings related to About -->
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="about_toolname">Save GPS Position</string>
    <string name="about_description">Use this app to remember a GPS position.</string>
    <string name="about_version">Version: 1.3</string>
    <string name="about_copyright">Copyright: Björn Lönne (2017/2019)</string>

    <!-- Strings related to Settings -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>

    <!-- Strings related to popup -->
    <string name="popup_info1">INFO1</string>
    <string name="popup_info2">INFO2</string>
    <string name="popup_close">Close</string>

</resources>
