<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/find_pos"
            android:title="@string/find_pos" />

        <item android:title="@string/maptypehead">
            <menu>
                <item
                    android:id="@+id/normal_map"
                    android:title="@string/normal_map"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/hybrid_map"
                    android:title="@string/hybrid_map"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/satellite_map"
                    android:title="@string/satellite_map"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/terrain_map"
                    android:title="@string/terrain_map"
                    app:showAsAction="never" />
            </menu>
        </item>
        <item
            android:id="@+id/nav_about"
            android:title="@string/action_about" />
    </group>
</menu>
