<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup_element"
    android:layout_width="240dp"
    android:layout_height="285dp"
    android:background="@drawable/warningpopup">

    <TextView
        android:id="@+id/popup_info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/popup_info2"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/popup_info2"
        android:text="@string/popup_info1"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/popup_info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/popup_info1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/popup_info2"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_info1" />

    <Button
        android:id="@+id/popup_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/popup_info2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:text="@string/popup_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_info2" />
</RelativeLayout>